## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# BACKEND
######################################################################

backend_FILES = \
				backend/parser.cpp 

backend_INCLUDES = \
				   -I$(srcdir)/backend
