## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# BRIDGE
######################################################################

bridge_FILES = \
				bridge/ddl.cpp

bridge_INCLUDES = \
				   -I$(srcdir)/bridge\
