## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# CATALOG
######################################################################

catalog_FILES = \
				catalog/auth_program.cpp \
				catalog/catalog.cpp \
				catalog/catalog_integer.cpp \
				catalog/catalog_type.cpp \
				catalog/cluster.cpp \
				catalog/column.cpp \
				catalog/column_ref.cpp \
				catalog/conflict_pair.cpp \
				catalog/conflict_set.cpp \
				catalog/connector.cpp \
				catalog/connector_table_info.cpp \
				catalog/constant_value.cpp \
				catalog/constraint.cpp \
				catalog/constraint_ref.cpp \
				catalog/database.cpp \
				catalog/group.cpp \
				catalog/group_ref.cpp \
				catalog/host.cpp \
				catalog/index.cpp \
				catalog/materialized_view_info.cpp \
				catalog/partition.cpp \
				catalog/plan_fragment.cpp \
				catalog/procedure.cpp \
				catalog/proc_parameter.cpp \
				catalog/program.cpp \
				catalog/schema.cpp \
				catalog/site.cpp \
				catalog/snapshot_schedule.cpp \
				catalog/statement.cpp \
				catalog/stmt_parameter.cpp \
				catalog/table.cpp \
				catalog/table_ref.cpp \
				catalog/transaction.cpp \
				catalog/user.cpp \
				catalog/user_ref.cpp

catalog_INCLUDES = \
				   -I$(srcdir)/catalog    
