## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# CATALOG
######################################################################

catalog_FILES = \
				catalog/schema.cpp	\			
				catalog/transaction.cpp \
				catalog/manager.cpp				

catalog_INCLUDES = \
				   -I$(srcdir)/catalog    
