## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# CATALOG
######################################################################

catalog_FILES = \
				catalog/catalog.cpp \
				catalog/schema.cpp \
				catalog/transaction.cpp \
				catalog/manager.cpp \
				catalog/constraint.cpp \
				catalog/index.cpp \
				catalog/column.cpp \
				catalog/table.cpp \
				catalog/database.cpp 

catalog_INCLUDES = \
				   -I$(srcdir)/catalog    
