## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# COMMON
######################################################################

common_FILES = \
			   common/value.cpp \
			   common/types.cpp \
			   common/varlen.cpp \
			   common/context.cpp \
			   common/pool.cpp

common_INCLUDES = \
				  -I$(srcdir)/common    
