## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# CONCURRENCY
######################################################################

concurrency_FILES = \
				concurrency/transaction.cpp

concurrency_INCLUDES = \
				   -I$(srcdir)/concurrency
