## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# EXECUTOR
######################################################################

executor_FILES = \
		executor/abstract_executor.cpp \
                executor/logical_schema.cpp \
	        executor/logical_tile.cpp \
                executor/projection_executor.cpp

executor_INCLUDES = \
                    -I$(srcdir)/executor
