## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# EXECUTOR
######################################################################

executor_FILES = \
		executor/abstract_executor.cpp \
		executor/logical_tile.cpp \
		executor/logical_tile_factory.cpp \
                executor/materialization_executor.cpp

executor_INCLUDES = \
                    -I$(srcdir)/executor
