## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# EXPRESSION
######################################################################

expression_FILES =   

expression_INCLUDES = \
				  -I$(srcdir)/expression    
