## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# INDEX
######################################################################

index_FILES = \
			  index/index.cpp \
			  index/index_factory.cpp \
			  index/array_unique_index.cpp

index_INCLUDES = \
				 -I$(srcdir)/common    
