## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# INDEX
######################################################################

index_FILES = \
			  index/index.cpp \
			  index/index_factory.cpp \
			  index/concurrent_btree.cpp \
			  index/btree_multimap_index.cpp

index_INCLUDES = \
				 -I$(srcdir)/common    
