## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# MEMCACHED DRIVER
######################################################################

mc_driver_FILES = \
			  mc_driver/driver.cpp \
			  mc_driver/interfaces.cpp

mc_driver_INCLUDES = \
				 -I$(srcdir)/backend/libpq