## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# OPTIMIZER
######################################################################

optimizer_FILES = \
				backend/optimizer/postgres_shim.cpp \
				backend/optimizer/query_transformer.cpp \
				backend/optimizer/optimizer.cpp \
				backend/optimizer/convert_query_to_op.cpp \
				backend/optimizer/convert_op_to_plan.cpp \
				backend/optimizer/operator_node.cpp \
				backend/optimizer/query_operators.cpp \
				backend/optimizer/query_node_printer.cpp \
				backend/optimizer/operators.cpp \
				backend/optimizer/operator_visitor.cpp \
				backend/optimizer/group.cpp \
				backend/optimizer/group_expression.cpp \
				backend/optimizer/memo.cpp \
				backend/optimizer/pattern.cpp \
				backend/optimizer/binding.cpp \
				backend/optimizer/op_expression.cpp \
				backend/optimizer/rule_impls.cpp \
				backend/optimizer/column.cpp \
				backend/optimizer/column_manager.cpp \
				backend/optimizer/property.cpp \
				backend/optimizer/properties.cpp \
				backend/optimizer/property_set.cpp \
				backend/optimizer/stats.cpp \
				backend/optimizer/tuple_sample.cpp \
				backend/optimizer/util.cpp


optimizer_INCLUDES = \
				   -I$(srcdir)/backend/optimizer
