## Makefile.am -- Process this file with automake to produce Makefile.in
 
######################################################################
# PARSER
######################################################################

parser_FILES = \
			   parser/parser.cpp \
			   parser_bison.ypp \
			   parser_flex.lpp \
			   parser/sql_parser.cpp \
			   parser/expr.cpp \
			   parser/destruct.cpp \
			   parser/sql_helper.cpp \
			   parser/sql_statement.cpp
			   			   
AM_YFLAGS = -d

parser_INCLUDES = \
				  -I$(srcdir)/parser

