## Makefile.am -- Process this file with automake to produce Makefile.in
 
######################################################################
# PARSER
######################################################################

parser_FILES = \
			   parser/parser_bison.cpp \
			   parser/parser_flex.cpp \
			   parser/parser.cpp \
			   parser/parser_utils.cpp \
			   parser/sql_statement.cpp \
			   parser/table_ref.cpp
			   			   
parser_INCLUDES = \
				  -I$(srcdir)/parser
